--- a/index.html
+++ b/index.html
@@ -32,26 +32,30 @@
                     <div class="col-sm-12">
                         <p class="text-center text-light lead pt-5" id="login">LOGIN</p>
                         <form>
+                            <div class="form-control-container">
 
-                            <div class="row d-flex justify-content-center">
-                                <div class="col-sm-9 ">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Email" class="form-control" id="ema" required>
-                                        <p id="email-verification" class="emaill">  </p>
+                                <div class="row d-flex justify-content-center">
+                                    <div class="col-sm-9 ">
+                                        <div class="form-group">
+                                            <input type="email" placeholder="Email" class="form-control" id="ema"
+                                                required>
+                                            <p id="email-verification" class="emaill"> </p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="row  d-flex justify-content-center">
+                                    <div class="col-sm-9">
+                                        <div class="form-group">
+                                            <input type="password" placeholder="password" class="form-control" required
+                                                id="pass">
+                                            <p class="passW" id="pass-verify"></p>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
 
-
-                            <div class="row  d-flex justify-content-center">
-                                <div class="col-sm-9">
-                                    <div class="form-group">
-                                        <input type="password" placeholder="password" class="form-control" required
-                                            id="pass">
-                                        <p class="passW" id="pass-verify"></p>
-                                    </div>
-                                </div>
-                            </div>
                             <div class="row">
                                 <div class="col-sm-12">
                                     <p class="text-right" id="text-right"><a href="#">Forgot your password?</a></p>
@@ -71,7 +75,7 @@
                             </div>
                         </form>
 
-                        <p class="text-center text-light" id="login-with">Or Login with</p>
+                        <p class="text-center text-light" id="login-with">Or <br> Login With</p>
 
                         <div class="row d-flex justify-content-center">
                             <div class="row ">
